client/src/static/style/style.css
/* ... */
.sheet__table__info {
    border-bottom: 1px solid var(--primary);
}

.btn--check {
    background: transparent;
    width: 19px;
    height: 19px;
    border-radius: 3px;
    border: 1px solid var(--primary);
    position: relative;
    margin: auto;
    padding: 0;
}

.btn--check:hover {
    background: #dedede;
}

.btn--check--selected::after {
    content: "";
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 50%;
    height: 50%;
    background: var(--primary);
    border-radius: 3px;
}

.cell--legend {
    font-size: 12px;
}

table .cell--legend {
    text-align: left;
    font-weight: 700;
}

.btn--selectAll {
    background: transparent;
    width: 20px;
    height: auto;
    margin: 0 15px;
    display: inline-block;
}

.btn--selectAll > img {
    width: 100%;
}

.btn--selectAll:hover {
    background: transparent;
    text-decoration: underline;
}

.scroll {
    border-right: 1px solid var(--primary);
    overflow-y: auto !important;
    scrollbar-width: thin;
    scrollbar-color: var(--primary) #C1DCFF;
}

.scroll::-webkit-scrollbar {
    width: 15px;
    height: 15px;
}
.scroll::-webkit-scrollbar-button {
    width: 0px;
    height: 0px;
}
.scroll::-webkit-scrollbar-thumb {
    background: var(--primary);
    border: 33px none #ffffff;
}
.scroll::-webkit-scrollbar-thumb:hover {
    background: var(--hover);
}
.scroll::-webkit-scrollbar-thumb:active {
    background: var(--hover);
}
.scroll::-webkit-scrollbar-track {
    background: #dedede;
    border: 49px none #dedede;
}

.scroll::-webkit-scrollbar-corner {
    background: transparent;
}

table, table * {
    background: #fff;
}

.btn--export,
.btn--autoMatch {
    width: 400px;
    height: 50px;
    border-radius: 50px;
    margin: 20px auto;
}

.btn--autoMatch {
    margin: 20px 0;
}

.btn--remove {
    background: red;
    width: 100px;
    height: 35px;
    font-size: 14px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 20px;
    border-radius: 3px;
}

.btn--remove:hover {
    background: #ed1111;
}

.sheetLoaded {
    width: 200px;
    height: 200px;
    border: 2px solid var(--primary);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
    border-radius: 10px;
}

.sheetLoaded__text {
    text-align: center;
    font-size: 15px;
    font-weight: 700;
}

.btn:disabled {
    opacity: .75;
    pointer-events: none;
    cursor: default;
}

.sheetWrapper .sheet {
    max-height: 70vh;
}

.modal {
    position: fixed;
    z-index: 10005;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: rgba(0, 0, 0, .6);
    display: flex;
    justify-content: center;
    align-items: center;
    transition: .2s all;
}

.modal__line {
    width: 100%;
}

.modal__inner {
    width: 490px;
    height: 80vh;
    overflow-y: auto;
    padding: 30px;
    background: #fff;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    min-height: 400px;
}

.modal__inner--testConfiguration {
    width: 800px;
}

.modal__header {
    margin: 20px 0;
}

.modal__label {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin: 8px 0;
    cursor: pointer;
}

.modal__label .btn--check {
    margin-right: 15px;
}

.modal__label--disabled {
    opacity: .5;
    pointer-events: none;
    cursor: default;
}

.btn--addPriority {
    background: transparent !important;
    width: auto;
    margin: 10px 0;
    height: 40px;
    font-size: 21px;
    color: grey;
    flex-basis: 100%;
    padding: 5px 15px 5px 5px;
    border-bottom: 1px solid grey;
    text-align: left;
    max-height: 40px;
    opacity: .65;
    font-weight: 400;
    justify-content: flex-start;
}

.btn--addPriority:hover {
    opacity: 1;
}

.btn--deleteCondition,
.btn--addCondition {
    text-decoration: underline;
    background: transparent !important;
    color: var(--primary);
    font-weight: 500;
    margin: 15px 0;
    font-size: 15px;
}

.btn--deleteCondition {
    color: red;
    margin: 5px 0 5px 15px;
}

.btn--deleteCondition:hover {
    opacity: .8;
}

.priorities__item {
    margin: 15px 0;
    border: 2px solid var(--primary);
    padding: 15px;
    position: relative;
}

.btn--deletePriority {
    background: red;
    font-size: 21px;
    font-weight: 700;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    position: absolute;
    top: -10px;
    right: -10px;
    z-index: 3;
}

.btn--deletePriority:hover {
    background: #dd1111;
}

.priorities__item__condition {
    margin: 15px 0 15px 15px;
}

.priorities__item__condition__text {
    margin: 15px 0 8px;
    font-size: 15px;
}

.priorities__item__condition__operator {
    margin: 22px 0 22px 15px;
    font-size: 15px;
}

select,
option {
    padding: 5px 3px;
}

.select--logicalOperator {
    border: 2px solid var(--primary);
    margin-left: 15px;
    font-size: 15px;
}

.select--matchFunction {
    margin-left: 0;
}

.priorities__item__condition__header {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.modal__info {
    font-size: 14px;
    margin: 15px auto;
    text-align: center;
}

.btn--startAutoMatch {
    padding: 15px;
    border-radius: 60px;
    margin: 10px auto 0;
    width: 100%;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal__inner > .center {
    width: 100%;
    height: 100%;
    flex-direction: column;
}

.center .center__header {
    font-size: 16px;
    font-weight: 400;
    text-align: center;
    margin-top: 20px;
}

.select__btn {
    width: 100%;
    padding: 3px 10px;
    height: 50px;
    background: transparent;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: none;
}

.select__btn:active,
.select__btn:focus {
    border: none;
    outline: none;
}
/* ... */

